--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -104,3 +104,9 @@
         font-size: 1rem;
     }
 }
+
+@media screen and (max-width: 1920px){
+    #contact{
+        margin-top: 2rem;
+    }
+}
