--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -107,6 +107,14 @@
 
 @media screen and (max-width: 3500px){
     #contact{
-        margin-top: 5rem;
+        margin-top: 20rem;
+    }
+
+    #experience{
+        margin-top: 20rem;
+    }
+
+    #projects{
+        margin-top: 20rem;
     }
 }
