--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -72,6 +72,10 @@
     .about-containers{
         margin-top: 0;
     }
+    footer .nav-links-container{
+        margin-top: 0rem;
+    }
+
 }
 
 @media screen and (max-width: 600px){
@@ -89,8 +93,12 @@
 
     footer nav{
         height: fit-content;
-        margin-bottom: 2rem;
-    }
+        margin-bottom: 2rem;}
+
+    footer .nav-links-container{
+            margin-top: 0rem;
+        }
+    
 
     .about-containers, .contact-info-upper-container, .btn-container{
         flex-wrap: wrap;
