--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 *{
     margin: 0;
     padding: 0;
+    background-color: rgb(28, 28, 28);
 }
 
 body {
@@ -41,10 +42,15 @@ nav{
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
+    
+}
+
+.nav-links a{
+    color: rgb(113, 210, 210);
 }
 
 a{
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     text-decoration-color: white;
 }
@@ -58,6 +64,7 @@ a:hover{
 
 .logo{
     font-size: 2rem;
+    color: rgb(113, 210, 210);
 }
 
 .logo:hover{
@@ -164,10 +171,12 @@ section{
 
 .section__pic-container{
     display: flex;
-    height: 400px;
-    width: 400px;
+    height: 450px;
+    width: 450px;
     margin: auto 0;
+
 }
+
 
 .section__text{
     align-self: center;
@@ -175,7 +184,7 @@ section{
 }
 
 .title{
-    color: blueviolet;
+    color: rgb(113, 210, 210);
 }
 .section__text p{
     font-weight: 600;
@@ -218,7 +227,9 @@ section{
     justify-content: center;
     gap: 1rem;
 }
-
+.btn-container .btn{
+    color: aliceblue;
+}
 .btn{
     font-weight: 600;
     transition: all 300ms ease;
@@ -228,7 +239,8 @@ section{
 }
 
 .btn-colour-1, .btn-colour-2{
-    border: rgb(182, 86, 223)0.1rem solid;
+    border:  rgb(113, 210, 210) 0.1rem solid;
+    
     
 }
 .btn-colour-1:hover, .btn-colour-2:hover{
@@ -236,17 +248,18 @@ section{
 
 }
 .btn-colour-1, .btn-colour-2:hover{
-    background: rgba(255, 54, 248, 0.226);
+    background: rgba(64, 252, 255, 0.226);
     color: white;
 
 }
 
 .btn-colour-1:hover{
-    background: rgb(125, 0, 130);
+    background: rgb(113, 210, 210);
 }
 
 .btn-colour-2{
     background: none;
+    text-decoration: aliceblue;
 }
 
 .btn-colour-2:hover{
@@ -255,6 +268,7 @@ section{
 
 .btn-container{
     gap: 1rem;
+    background-color: rgb(28, 28, 28);
 }
 
 /* ABOUT */
@@ -273,10 +287,13 @@ section{
     justify-content: center;
     flex-direction: column;
     margin-top: 5rem;
+    
 }
 
 .about-container, .about-details-container{
     display: flex;
+    
+    
 }
 
 .about-pic{
@@ -294,10 +311,18 @@ section{
     margin-top: 1rem;
     padding: 1.5rem;
     flex: 1;
-    background: white;
+    background-color: rgb(28, 28, 28);
     border-radius: 2rem;
-    border: rgb(182, 86, 223)0.1rem solid;
+    border: rgb(86, 223, 216)0.1rem solid;
     text-align: center;
+}
+
+.details-container h3{
+    color: white;
+}
+
+.details-container p{
+    color: rgba(245, 245, 245, 0.466);
 }
 
 .section-container{
@@ -318,7 +343,7 @@ section{
 }
 
 .experience-sub-title{
-    color: rgb(255, 150, 218);
+    color: rgb(150, 255, 255);
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 2rem;
@@ -337,6 +362,11 @@ section{
     flex-direction: row;
     gap: 2.5rem;
     justify-content: space-around;
+    color: rgb(28, 28, 28);
+}
+
+.article-container h3{
+    color: white;
 }
 
 article{
@@ -359,7 +389,7 @@ article.icon{
 
 .colour-container{
     border-color: azure;
-    background: rgba(143, 143, 143, 0.236);
+    background: rgb(28,28,28);
     margin: 1.5rem;
 }
 
@@ -371,11 +401,11 @@ article.icon{
 
 .project-title{
     margin: 1rem;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .project-btn{
-    color: black;
+    color: rgb(196, 196, 196);
     border-color: beige;
 }
 
@@ -393,7 +423,7 @@ article.icon{
     justify-content: center;
     border-radius: 2rem;
     border: rgb(53,53,53) 0.1rem solid;
-    border-color: rgb(182, 86, 223);
+    border-color: rgb(86, 223, 219);
     background: (250, 250, 250);
     margin: 2rem auto;
     padding: 0.5rem;
@@ -409,6 +439,7 @@ article.icon{
 
 .contact-info-container p{
     font-size: larger;
+    color: white;
 
 }
 
